--- a/Modpack_CORE/manifest.json
+++ b/Modpack_CORE/manifest.json
@@ -1,30 +1,29 @@
 ﻿{
   "name": "ZenModpack_CORE",
   "description": "ZenModpack CORE. The full collection of all ZenMods",
-  "version_number": "1.0.2",
+  "version_number": "1.0.3",
   "website_url": "https://github.com/ZenDragonX/ZenMods_Valheim",
   "dependencies": [
 		"denikson-BepInExPack_Valheim-5.4.2202",
-		"JereKuusela-Server_devcommands-1.88.0",
 		"ValheimModding-Jotunn-2.23.2",
-		"ZenDragon-ZenBeehive-0.1.3",
-		"ZenDragon-ZenBossStone-0.1.9",
-		"ZenDragon-ZenBreeding-0.1.0",
-		"ZenDragon-ZenCombat-0.1.12",
-		"ZenDragon-ZenCompass-1.0.10",
-		"ZenDragon-ZenConstruction-0.1.0",
-		"ZenDragon-ZenHoverItem-0.1.2",
-		"ZenDragon-ZenItemStands-0.3.2",
-		"ZenDragon-ZenMap-0.2.8",
-		"ZenDragon-ZenPath-0.1.5",
-		"ZenDragon-ZenRaids-0.1.1",
-		"ZenDragon-ZenRecycle-0.1.1",
-		"ZenDragon-ZenRedecorate-0.2.20",
-		"ZenDragon-ZenSign-0.3.22",
-		"ZenDragon-ZenTargeting-0.3.1",
-		"ZenDragon-ZenTerrain-0.1.1",
-		"ZenDragon-ZenUI-0.1.1",
+		"ZenDragon-ZenUI-0.1.2",
+		"ZenDragon-ZenSign-1.0.5",
+		"ZenDragon-ZenMap-0.2.11",
+		"ZenDragon-ZenItemStands-0.3.4",
+		"ZenDragon-ZenHoverItem-0.1.4",
+		"ZenDragon-ZenCompass-1.0.11",
+		"ZenDragon-ZenWorldSettings-0.1.19",
 		"ZenDragon-ZenUseItem-0.1.4",
-		"ZenDragon-ZenWorldSettings-0.1.16"
+		"ZenDragon-ZenTerrain-0.1.1",
+		"ZenDragon-ZenTargeting-0.3.2",
+		"ZenDragon-ZenRedecorate-1.0.2",
+		"ZenDragon-ZenRecycle-0.1.1",
+		"ZenDragon-ZenRaids-0.1.1",
+		"ZenDragon-ZenPath-0.1.5",
+		"ZenDragon-ZenConstruction-0.1.0",
+		"ZenDragon-ZenCombat-0.1.14",
+		"ZenDragon-ZenBossStone-0.1.11",
+		"ZenDragon-ZenBeehive-0.1.4",
+		"ZenDragon-ZenBreeding-0.1.1"
 	]
 }
