--- a/Modpack_CORE/manifest.json
+++ b/Modpack_CORE/manifest.json
@@ -1,6 +1,6 @@
 ﻿{
   "name": "ZenModpack_CORE",
-  "description": "ZenModpack CORE. The full collection of all ZenMods",
+  "description": "CORE - The full collection of all ZenMods",
   "version_number": "1.0.3",
   "website_url": "https://github.com/ZenDragonX/ZenMods_Valheim/wiki",
   "dependencies": [
