--- a/Modpack_VANILLA/manifest.json
+++ b/Modpack_VANILLA/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "name": "ZenModpack_VANILLA",
   "description": "VANILLA - Client only subset of ZenMods selected to provide amazing QoL improvements on Vanilla servers!  Full gamepad support.",
-  "version_number": "1.0.0",
+  "version_number": "1.0.2",
   "website_url": "https://github.com/ZenDragonX/ZenMods_Valheim/wiki",
   "dependencies": [
 		"denikson-BepInExPack_Valheim-5.4.2202",
@@ -14,6 +14,7 @@
         "ZenDragon-ZenCombat-0.1.14",
         "ZenDragon-ZenTargeting-0.3.3",
         "ZenDragon-ZenConstruction-0.1.0",
-        "ZenDragon-ZenHoverItem-0.1.4"
+        "ZenDragon-ZenHoverItem-0.1.4",
+		"ZenDragon-ZenUseItem-0.1.4"
 	]
 }
