--- a/Modpack_ZENHEIM_VANILLA/manifest.json
+++ b/Modpack_ZENHEIM_VANILLA/manifest.json
@@ -1,5 +1,5 @@
 ﻿{
-  "name": "ZENHEIM - Vanilla",
+  "name": "ZENHEIM_Vanilla",
   "description": "Enhanced Valheim for Vanilla Server QoL - The rules have changed. Optimized custom code. Full gamepad support.",
   "version_number": "1.0.0",
   "website_url": "https://github.com/ZenDragonX/ZenMods_Valheim/wiki",
