--- a/Modpack_VANILLA/manifest.json
+++ b/Modpack_VANILLA/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "name": "ZenModpack_VANILLA",
-  "description": "VANILLA - Client only subset of ZenMods selected to provide amazing QoL improvements on Vanilla servers!  Full gamepad support.",
-  "version_number": "1.0.4",
+  "description": "VANILLA - Subset of ZenModpack_CORE designed to provide amazing QoL improvements for clients connecting to vanilla servers!  Full gamepad support.",
+  "version_number": "1.0.5",
   "website_url": "https://github.com/ZenDragonX/ZenMods_Valheim/wiki",
   "dependencies": [
 		"denikson-BepInExPack_Valheim-5.4.2202",
@@ -15,6 +15,7 @@
         "ZenDragon-ZenTargeting-0.3.3",
         "ZenDragon-ZenConstruction-0.1.0",
         "ZenDragon-ZenHoverItem-0.1.4",
-		"ZenDragon-ZenUseItem-0.1.4"
+		"ZenDragon-ZenUseItem-0.1.4",
+        "ZenDragon-ZenItemStands-0.3.6"
 	]
 }
