--- a/Modpack_VANILLA/manifest.json
+++ b/Modpack_VANILLA/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "name": "ZenModpack_VANILLA",
   "description": "VANILLA - Subset of ZenModpack_CORE designed to provide amazing QoL improvements for clients connecting to vanilla servers!  Full gamepad support.",
-  "version_number": "1.0.7",
+  "version_number": "1.0.9",
   "website_url": "https://github.com/ZenDragonX/ZenMods_Valheim/wiki",
   "dependencies": [
 		"denikson-BepInExPack_Valheim-5.4.2202",
@@ -16,6 +16,10 @@
         "ZenDragon-ZenConstruction-0.1.0",
         "ZenDragon-ZenHoverItem-0.1.4",
 		"ZenDragon-ZenUseItem-0.1.4",
-        "ZenDragon-ZenItemStands-0.3.6"
+        "ZenDragon-ZenItemStands-0.3.6",
+		"ZenDragon-ZenRedecorate-1.0.4",
+		"ZenDragon-ZenBreeding-0.1.2",
+		"ZenDragon-ZenRecycle-0.1.3",
+		"ZenDragon-ZenTerrain-0.1.2"
 	]
 }
