update modpacks to include ZenPlayer
also sorted the mod order alphabetically.

--- a/Modpack_CORE/manifest.json
+++ b/Modpack_CORE/manifest.json
@@ -1,29 +1,30 @@
 ﻿{
   "name": "ZenModpack_CORE",
   "description": "CORE - The full collection of all ZenMods",
-  "version_number": "1.0.4",
+  "version_number": "1.0.5",
   "website_url": "https://github.com/ZenDragonX/ZenMods_Valheim/wiki",
   "dependencies": [
 		"denikson-BepInExPack_Valheim-5.4.2202",
 		"ValheimModding-Jotunn-2.23.2",
-		"ZenDragon-ZenUI-0.1.2",
-		"ZenDragon-ZenSign-1.0.6",
-		"ZenDragon-ZenMap-0.2.11",
-		"ZenDragon-ZenItemStands-0.3.4",
-		"ZenDragon-ZenHoverItem-0.1.4",
-		"ZenDragon-ZenCompass-1.0.11",
-		"ZenDragon-ZenWorldSettings-0.1.19",
-		"ZenDragon-ZenUseItem-0.1.4",
-		"ZenDragon-ZenTerrain-0.1.1",
-		"ZenDragon-ZenTargeting-0.3.2",
-		"ZenDragon-ZenRedecorate-1.0.2",
-		"ZenDragon-ZenRecycle-0.1.1",
-		"ZenDragon-ZenRaids-0.1.1",
-		"ZenDragon-ZenPath-0.1.5",
-		"ZenDragon-ZenConstruction-0.1.0",
-		"ZenDragon-ZenCombat-0.1.14",
-		"ZenDragon-ZenBossStone-0.1.11",
 		"ZenDragon-ZenBeehive-0.1.4",
-		"ZenDragon-ZenBreeding-0.1.1"
+		"ZenDragon-ZenBossStone-0.1.11",
+		"ZenDragon-ZenBreeding-0.1.1",
+		"ZenDragon-ZenCombat-0.1.14",
+		"ZenDragon-ZenCompass-1.0.11",
+		"ZenDragon-ZenConstruction-0.1.0",
+		"ZenDragon-ZenHoverItem-0.1.4",
+		"ZenDragon-ZenItemStands-0.3.4",
+		"ZenDragon-ZenMap-0.2.11",
+		"ZenDragon-ZenPath-0.1.5",
+		"ZenDragon-ZenPlayer-0.1.4",
+		"ZenDragon-ZenRaids-0.1.1",
+		"ZenDragon-ZenRecycle-0.1.1",
+		"ZenDragon-ZenRedecorate-1.0.2",
+		"ZenDragon-ZenSign-1.0.6",
+		"ZenDragon-ZenTargeting-0.3.2",
+		"ZenDragon-ZenTerrain-0.1.1",
+		"ZenDragon-ZenUI-0.1.2",
+		"ZenDragon-ZenUseItem-0.1.4",
+		"ZenDragon-ZenWorldSettings-0.1.19"
 	]
 }
