--- a/Modpack_VANILLA/manifest.json
+++ b/Modpack_VANILLA/manifest.json
@@ -1,25 +1,26 @@
 ﻿{
   "name": "ZenModpack_VANILLA",
   "description": "VANILLA - Subset of ZenModpack_CORE designed to provide amazing QoL improvements for clients connecting to vanilla servers!  Full gamepad support.",
-  "version_number": "1.0.12",
+  "version_number": "1.1.0",
   "website_url": "https://github.com/ZenDragonX/ZenMods_Valheim/wiki",
   "dependencies": [
-		"ZenDragon-ZenBeehive-0.1.4",
-		"ZenDragon-ZenBossStone-0.1.18",
-		"ZenDragon-ZenBreeding-0.1.2",
-		"ZenDragon-ZenCombat-0.1.14",
-		"ZenDragon-ZenCompass-1.0.11",
-		"ZenDragon-ZenConstruction-0.1.0",
-		"ZenDragon-ZenHoverItem-0.1.4",
-		"ZenDragon-ZenItemStands-0.3.6",
-		"ZenDragon-ZenPath-0.1.5",
-		"ZenDragon-ZenPlayer-0.1.4",
-		"ZenDragon-ZenRecycle-0.1.3",
-		"ZenDragon-ZenRedecorate-1.0.4",
-		"ZenDragon-ZenSign-1.0.6",
-		"ZenDragon-ZenTargeting-0.3.3",
-		"ZenDragon-ZenTerrain-0.1.2",
-		"ZenDragon-ZenUI-0.1.2",
-		"ZenDragon-ZenUseItem-0.1.4"
+		"ZenDragon-ZenBeehive-0.2.1",
+		"ZenDragon-ZenBossStone-0.2.1",
+		"ZenDragon-ZenBreeding-0.2.1",
+		"ZenDragon-ZenCombat-0.2.1",
+		"ZenDragon-ZenCompass-1.1.1",
+		"ZenDragon-ZenConstruction-0.3.1",
+		"ZenDragon-ZenHoverItem-0.2.1",
+		"ZenDragon-ZenItemStands-0.5.1",
+		"ZenDragon-ZenPath-0.2.1",
+		"ZenDragon-ZenPlayer-0.2.1",
+		"ZenDragon-ZenRecycle-0.3.1",
+		"ZenDragon-ZenRedecorate-1.1.1",
+		"ZenDragon-ZenSign-1.2.1",
+		"ZenDragon-ZenTargeting-0.5.1",
+		"ZenDragon-ZenTerrain-0.2.1",
+		"ZenDragon-ZenUI-0.2.2",
+		"ZenDragon-ZenUseItem-0.2.1",
+		"ZenDragon-ZenWorldSettings-0.3.1"
 	]
 }
