--- a/Modpack_ZENHEIM_VANILLA/manifest.json
+++ b/Modpack_ZENHEIM_VANILLA/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
   "name": "ZENHEIM_Vanilla",
   "description": "Enhanced Valheim for vanilla server QoL - The rules have changed. Optimized custom code. Full gamepad support.",
-  "version_number": "1.1.6",
+  "version_number": "1.1.7",
   "website_url": "https://github.com/ZenDragonX/ZenMods_Valheim/wiki",
   "dependencies": [
 		"Azumatt-FirstPersonMode-1.3.9",
@@ -9,6 +9,7 @@
 		"Goldenrevolver-Teleport_Instantly_Updates_Weather_And_Removes_Wet_Debuff-1.0.3",
 		"MSchmoecker-VNEI-0.16.0",
 		"Neobotics-UnRemove-0.1.8",
+		"shudnal-ConfigurationManager-1.1.4",
 		"ZenDragon-AugaLite-1.0.4",
 		"ZenDragon-ZenModpack_VANILLA-1.1.0"
 	]
