added website info to readme

--- a/Modpack_ZENHEIM/config/shudnal.Seasons.cfg
+++ b/Modpack_ZENHEIM/config/shudnal.Seasons.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin Seasons v1.4.3
+## Settings file was created by plugin Seasons v1.7.9
 ## Plugin GUID: shudnal.Seasons
 
 [General]
@@ -23,6 +23,11 @@ Logging enabled = false
 # Default value: 1800
 Day length in seconds = 0
 
+## Show seasonal tips on loading screen. [Not Synced with Server]
+# Setting type: Boolean
+# Default value: true
+Loading tips enabled = true
+
 [Season]
 
 ## Force disables Bloom graphics setting while in Winter and restores it in other seasons (it will not change Graphics setting, only disables posteffect).
@@ -42,7 +47,7 @@ Reduce SnowStorm particles in Winter = {"x":250.0,"y":1000.0}
 ## Enables seasonal (Halloween, Midsummer, Yule) items in the corresponding season
 # Setting type: Boolean
 # Default value: true
-Enable seasonal items = true
+Enable seasonal items = false
 
 ## Prevents death from freezing when not in mountains or deep north
 # Setting type: Boolean
@@ -74,25 +79,41 @@ Crops will die after set day in winter = 3
 # Default value: true
 Crops will survive if protected by fire = true
 
+## Crops and pickables will have given chance to produce a harvest instead of complete perish.
+# Setting type: Single
+# Default value: 0.33
+# Acceptable value range: From 0 to 1
+Crops will have a chance to survive winter = 0.33
+
+## After crop is hit by winter it will not perish immediately but will start to gradually freeze to death.
+# Setting type: Single
+# Default value: 120
+Crops will be freezing for seconds until perish = 120
+
+## With the onset of winter, any ground cultivated by player turns into ordinary dirt and has to be recultivated. It happens once per year.
+# Setting type: Boolean
+# Default value: false
+Cultivated ground turns into regular Dirt in Winter = false
+
 ## Crops and pickables from the list will not perish after set day in winter
 # Setting type: String
-# Default value: Pickable_Carrot, Pickable_Barley, Pickable_Barley_Wild, Pickable_Flax, Pickable_Flax_Wild, Pickable_Thistle, Pickable_Mushroom_Magecap
-Crops will survive in winter = Pickable_Carrot, Pickable_Barley, Pickable_Barley_Wild, Pickable_Flax, Pickable_Flax_Wild, Pickable_Thistle, Pickable_Mushroom_Magecap
+# Default value: Pickable_Carrot,Pickable_Barley,Pickable_Barley_Wild,Pickable_Flax,Pickable_Flax_Wild,Pickable_Thistle,Pickable_Mushroom_Magecap
+Crops will survive in winter = Pickable_Carrot,Pickable_Barley,Pickable_Barley_Wild,Pickable_Flax,Pickable_Flax_Wild,Pickable_Thistle,Pickable_Mushroom_Magecap
 
 ## All consumable crops will be added automatically. Set only unconsumable crops here.Crops and pickables from the list will be controlled by growth multiplier in addition to consumable crops
 # Setting type: String
-# Default value: Pickable_Barley, Pickable_Barley_Wild, Pickable_Dandelion, Pickable_Flax, Pickable_Flax_Wild, Pickable_SeedCarrot, Pickable_SeedOnion, Pickable_SeedTurnip, Pickable_Thistle, Pickable_Turnip
-Crops to control growth = Pickable_Barley, Pickable_Barley_Wild, Pickable_Dandelion, Pickable_Flax, Pickable_Flax_Wild, Pickable_SeedCarrot, Pickable_SeedOnion, Pickable_SeedTurnip, Pickable_Thistle, Pickable_Turnip
+# Default value: Pickable_Barley,Pickable_Barley_Wild,Pickable_Dandelion,Pickable_Flax,Pickable_Flax_Wild,Pickable_SeedCarrot,Pickable_SeedOnion,Pickable_SeedTurnip,Pickable_Thistle,Pickable_Turnip
+Crops to control growth = Pickable_Barley,Pickable_Barley_Wild,Pickable_Dandelion,Pickable_Flax,Pickable_Flax_Wild,Pickable_SeedCarrot,Pickable_SeedOnion,Pickable_SeedTurnip,Pickable_Thistle,Pickable_Turnip
 
 ## Wood item names to control drop from trees
 # Setting type: String
-# Default value: Wood, FineWood, RoundLog, ElderBark, YggdrasilWood
-Wood to control drop = Wood, FineWood, RoundLog, ElderBark, YggdrasilWood
+# Default value: Wood,FineWood,RoundLog,ElderBark,YggdrasilWood
+Wood to control drop = Wood,FineWood,RoundLog,ElderBark,YggdrasilWood
 
 ## Meat item names to control drop from characters
 # Setting type: String
-# Default value: RawMeat, DeerMeat, NeckTail, WolfMeat, LoxMeat, ChickenMeat, HareMeat, SerpentMeat
-Meat to control drop = RawMeat, DeerMeat, NeckTail, WolfMeat, LoxMeat, ChickenMeat, HareMeat, SerpentMeat
+# Default value: RawMeat,DeerMeat,NeckTail,WolfMeat,LoxMeat,ChickenMeat,HareMeat,SerpentMeat
+Meat to control drop = RawMeat,DeerMeat,NeckTail,WolfMeat,LoxMeat,ChickenMeat,HareMeat,SerpentMeat
 
 ## If enabled - objects inside shield generator dome will be protected from seasonal effects both positive and negative.
 # Setting type: Boolean
@@ -109,6 +130,39 @@ Shield generator protects from Winter only = true
 # Setting type: Boolean
 # Default value: true
 Getting Wet in winter causes Cold = true
+
+## If enabled - night length from seasonal settings will peak at mid season and gradually change to the next season.
+## If disabled - it will be fixed value for any day of a season.
+# Setting type: Boolean
+# Default value: true
+Change night length gradually = false
+
+## If enabled - torch will not provide heat in dungeons.
+# Setting type: Boolean
+# Default value: true
+Disable torch warmth in dungeons in winter = true
+
+## If enabled - any frost-resistant armor piece will cause Warm debuff.
+# Setting type: Boolean
+# Default value: false
+Wearing warm armor piece in summer always causes Warm debuff = false
+
+## If you get Wet status in Mountains in dungeon you will get Cold status in all seasons,
+## unless you have frost resistance mead or you are near a fire or in shelter
+# Setting type: Boolean
+# Default value: true
+Getting Wet in Mountains causes Cold = true
+
+## If you get Wet status in Mountains or in Winter you will not get Cold status caused by
+## Getting Wet in winter causes Cold or Getting Wet in Mountains causes Cold configs
+# Setting type: Boolean
+# Default value: true
+Wearing 2 warm armor pieces prevents Cold caused by Wet = true
+
+## If enabled - you have to wear 2 armor pieces with frost resistance in Winter or get frost resistance mead.
+# Setting type: Boolean
+# Default value: true
+Mountains in Winter require 2 warm armor pieces = true
 
 Hide grass in winter = true
 
@@ -160,7 +214,7 @@ Control environments = true
 ## Enables seasonal random events
 # Setting type: Boolean
 # Default value: true
-Control random events = true
+Control random events = false
 
 ## Enables seasonal lightings change (basically gamma or brightness)
 # Setting type: Boolean
@@ -175,7 +229,7 @@ Control stats = true
 ## Enables seasonal minimap colors
 # Setting type: Boolean
 # Default value: true
-Control minimap = true
+Control minimap = false
 
 ## Enables seasonal coloring of yggdrasil branch in the sky and roots on the ground
 # Setting type: Boolean
@@ -185,7 +239,7 @@ Control yggdrasil branch and roots = true
 ## Enables seasonal changes of trader additional item availability
 # Setting type: Boolean
 # Default value: true
-Control trader seasonal items list = true
+Control trader seasonal items list = false
 
 ## Enables seasonal changes of grass thickness, size and sparseness
 # Setting type: Boolean
@@ -223,8 +277,8 @@ Default amount scale = 1.5
 
 ## Grass with set prefabs to be hidden in winter and to change size in other seasons
 # Setting type: String
-# Default value: instanced_meadows_grass, instanced_forest_groundcover_brown, instanced_forest_groundcover, instanced_swamp_grass, instanced_heathgrass, grasscross_heath_green, instanced_meadows_grass_short, instanced_heathflowers, instanced_mistlands_grass_short
-List of grass prefabs to control size = instanced_meadows_grass, instanced_forest_groundcover_brown, instanced_forest_groundcover, instanced_swamp_grass, instanced_heathgrass, grasscross_heath_green, instanced_meadows_grass_short, instanced_heathflowers, instanced_mistlands_grass_short
+# Default value: instanced_meadows_grass,instanced_forest_groundcover_brown,instanced_forest_groundcover,instanced_swamp_grass,instanced_heathgrass,grasscross_heath_green,instanced_meadows_grass_short,instanced_heathflowers,instanced_mistlands_grass_short
+List of grass prefabs to control size = instanced_meadows_grass,instanced_forest_groundcover_brown,instanced_forest_groundcover,instanced_swamp_grass,instanced_heathgrass,grasscross_heath_green,instanced_meadows_grass_short,instanced_heathflowers,instanced_mistlands_grass_short
 
 ## Default minimum size of grass will be multiplier by given number
 # Setting type: Single
@@ -238,7 +292,7 @@ Default maximum size multiplier = 1
 
 [Season - Override]
 
-## The season will be overrided by set season.
+## The season will be overridden by set season.
 # Setting type: Boolean
 # Default value: false
 Override = false
@@ -248,6 +302,16 @@ Override = false
 # Default value: Spring
 # Acceptable values: Spring, Summer, Fall, Winter
 Season = Fall
+
+## The season day will be overridden by set day.
+# Setting type: Boolean
+# Default value: false
+Day override = false
+
+## The season day to set.
+# Setting type: Int32
+# Default value: 1
+Day = 1
 
 [Season - UI]
 
@@ -311,6 +375,11 @@ Amount of ice floes in one zone = {"x":10.0,"y":20.0}
 # Default value: {"x":0.75,"y":2.0}
 Scale of ice floes = {"x":0.75,"y":2.0}
 
+## Health of ice floe of average size. Health changes proportionally the volume of an ice floe. Floes respawn is required to apply changes.
+# Setting type: Single
+# Default value: 20
+Health of ice floes = 20
+
 ## Enables special frozen ocean music
 # Setting type: Boolean
 # Default value: true
@@ -325,6 +394,11 @@ Frozen ocean surface slipperiness factor = 1
 # Setting type: Boolean
 # Default value: false
 Place ship above frozen ocean surface = true
+
+## Place floating containers above frozen ocean surface
+# Setting type: Boolean
+# Default value: false
+Place floating containers above frozen ocean surface = false
 
 [Seasons - Global keys]
 
@@ -360,64 +434,28 @@ Day number = SeasonDay_{0}
 
 [Seasons - Localization]
 
-## Season name
-# Setting type: String
-# Default value: Spring
 Season name Spring = Spring
 
-## Season name
-# Setting type: String
-# Default value: Summer
 Season name Summer = Summer
 
-## Season name
-# Setting type: String
-# Default value: Fall
 Season name Fall = Fall
 
-## Season name
-# Setting type: String
-# Default value: Winter
 Season name Winter = Winter
 
-## Message to be shown on the last day of the previous season.
-# Setting type: String
-# Default value: Spring is coming
 Status tooltip - Spring is coming = This is the last day of winter
 
-## Message to be shown on the last day of the previous season.
-# Setting type: String
-# Default value: Summer is coming
 Status tooltip - Summer is coming = 
 
-## Message to be shown on the last day of the previous season.
-# Setting type: String
-# Default value: Fall is coming
 Status tooltip - Fall is coming = 
 
-## Message to be shown on the last day of the previous season.
-# Setting type: String
-# Default value: Winter is coming
 Status tooltip - Winter is coming = Winter is coming
 
-## Message to be shown on the buff tooltip and Raven menu.
-# Setting type: String
-# Default value: Spring has come
 Season status effect tooltip - Spring has come = A new dawn has come.
 
-## Message to be shown on the buff tooltip and Raven menu.
-# Setting type: String
-# Default value: Summer has come
 Season status effect tooltip - Summer has come = The bees are buzzing.
 
-## Message to be shown on the buff tooltip and Raven menu.
-# Setting type: String
-# Default value: Fall has come
 Season status effect tooltip - Fall has come = Magic is in the air.
 
-## Message to be shown on the buff tooltip and Raven menu.
-# Setting type: String
-# Default value: Winter has come
 Season status effect tooltip - Winter has come = Brutal cold darkness.
 
 [Test]
@@ -438,6 +476,11 @@ Log time = false
 # Default value: false
 Log ice floes = false
 
+## Log elapsed time of prefabs caching process in descending order
+# Setting type: Boolean
+# Default value: false
+Log prefab caching time = false
+
 ## Fix clipping into ground on Plains - Swamp border
 # Setting type: Boolean
 # Default value: true
@@ -447,4 +490,19 @@ Plains Swamp border fix = true
 # Setting type: Boolean
 # Default value: false
 Fix position for frozen Karve = false
+
+## Last day
+# Setting type: Single
+# Default value: 0
+Last day terrain factor = 0
+
+## First day
+# Setting type: Single
+# Default value: 0
+First day terrain factor = 0
+
+## It is significantly faster than running with loading indicator but lacks visual progress
+# Setting type: Boolean
+# Default value: false
+Run texture caching without indicator = false
 
