--- a/Modpack_ZENHEIM/config/server_devcommands.cfg
+++ b/Modpack_ZENHEIM/config/server_devcommands.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin Server Devcommands v1.88
+## Settings file was created by plugin Server Devcommands v1.102
 ## Plugin GUID: server_devcommands
 
 [1. General]
@@ -14,6 +14,16 @@ Disables spawns with ghost mode = false
 # Setting type: Boolean
 # Default value: false
 Ignores sleep check with ghost mode = true
+
+## Adds the server as a fake player to allow server to send chat messages.
+# Setting type: Boolean
+# Default value: false
+Server chat = false
+
+## Name of the server chat player.
+# Setting type: String
+# Default value: Server
+Server chat name = Server
 
 ## Disables drops from creatures (if you control the zone), intended to fix high star enemies crashing the game.
 # Setting type: Boolean
@@ -58,17 +68,17 @@ Automatic no cost mode = false
 ## Automatically enables god mode when enabling devcommands.
 # Setting type: Boolean
 # Default value: false
-Automatic god mode = false
+Automatic god mode = true
 
 ## Automatically enables ghost mode when enabling devcommands.
 # Setting type: Boolean
 # Default value: false
-Automatic ghost mode = false
+Automatic ghost mode = true
 
 ## Sets the default value for the automatic item pick up feature.
 # Setting type: Boolean
 # Default value: true
-Automatic item pick up = true
+Automatic item pick up = false
 
 ## Automatically enables devcommands when joining servers.
 # Setting type: Boolean
@@ -117,6 +127,16 @@ No staggering with god mode = true
 # Setting type: Boolean
 # Default value: false
 Hide shout pings = false
+
+## When nocost mode is active, only show recipes craftable at your current crafting station.
+# Setting type: Boolean
+# Default value: true
+Limit recipes to station with nocost mode = true
+
+## When limiting recipes to station, also require the station's upgrade level.
+# Setting type: Boolean
+# Default value: false
+Respect station level with nocost mode = false
 
 # Setting type: Boolean
 # Default value: true
@@ -206,11 +226,6 @@ Max undo steps = 50
 # Default value: false
 Disable messages = false
 
-## The simulated key code when scrolling the wheel.
-# Setting type: KeyboardShortcut
-# Default value: None
-Mouse wheel bind key = 
-
 ## Key bind for map teleport.
 # Setting type: KeyboardShortcut
 # Default value: Mouse2 + LeftControl
@@ -254,7 +269,7 @@ Improved autocomplete = true
 ## Internal data for aliases.
 # Setting type: String
 # Default value: 
-Command aliases = hammer_area hammer_command hammer from=x,z,y circle=r angle=a rect=w,d height=h¤hammer_object hammer_command object from=x,z,y circle=r1-r2 angle=a rect=w1-w2,d height=h ignore=ignore¤hammer_slope hammer_terrain_to slope¤hammer_spawn hammer_command spawn_object $$ from=x,z,y radius=r1-r2¤hammer_terrain hammer_command terrain from=x,z,y circle=r1-r2 angle=a rect=w1-w2,d¤hammer_terrain_to hammer_shape rectangle;hammer_command terrain to=tx,tz,ty circle=r1-r2 rect=w1-w2,d¤hoe_object hoe_command object from=x,z,y circle=r1-r2 angle=a rect=w1-w2,d height=h ignore=ignore¤hoe_slope hoe_terrain_to slope¤hoe_spawn hoe_command spawn_object $$ from=x,z,y radius=r1-r2¤hoe_terrain hoe_command terrain from=x,z,y circle=r1-r2 angle=a rect=w1-w2,d¤hoe_terrain_to hammer_shape rectangle;hoe_command terrain to=tx,tz,ty circle=r1-r2 rect=w1-w2,d
+Command aliases = 
 
 ## Enables multiple commands when separated with ;.
 # Setting type: Boolean
@@ -284,7 +299,7 @@ Root users =
 ## Command names separated by , that can't be executed.
 # Setting type: String
 # Default value: dev_config disable_command
-Disabled commands = dev_config disable_command, printseeds, seed, nextseed, lodbias 0, lodbias 1
+Disabled commands = dev_config disable_command
 
 ## Key codes separated by ,
 # Setting type: String
@@ -301,6 +316,8 @@ Key for fly down = LeftControl
 # Default value: false
 Chat output = false
 
+Mouse wheel bind key = 
+
 [3. Formatting]
 
 ## Format of playerlist command.
@@ -316,7 +333,7 @@ Command log format = {player_id}/{character_name} ({pos_x:F0}, {pos_z:F0}, {pos_
 ## Format for the find command. Server side setting.
 # Setting type: String
 # Default value: {pos_x:F0}, {pos_z:F0}, {pos_y:F0}, distance {distance:F0} ({name})
-Find format = {pos_x:F0}, {pos_z:F0}, {pos_y:F0}, distance {distance:F0}
+Find format = {pos_x:F0}, {pos_z:F0}, {pos_y:F0}, distance {distance:F0} ({name})
 
 ## Format for minimap coordinates.
 # Setting type: String
