update server_devcommands.cfg and vnei.cfg defaults

--- a/Modpack_DEV/config/com.maxsch.valheim.vnei.cfg
+++ b/Modpack_DEV/config/com.maxsch.valheim.vnei.cfg
@@ -61,13 +61,13 @@ View Recipe Hotkey = R
 # Setting type: InputButtonWrapper
 # Default value: Right
 # Acceptable values: Left, Right, Middle, None
-Item Cheat Mouse Button = Middle
+Item Cheat Mouse Button = Right
 
 ## Mouse button to remove an item from the recent viewed item list.
 # Setting type: InputButtonWrapper
 # Default value: Middle
 # Acceptable values: Left, Right, Middle, None
-Remove Recent Item Mouse Button = Right
+Remove Recent Item Mouse Button = Middle
 
 ## Hotkey to go forward to the last viewed page in history.
 # Setting type: KeyboardShortcut
