--- a/Modpack_DEV/config/server_devcommands.cfg
+++ b/Modpack_DEV/config/server_devcommands.cfg
@@ -1,11 +1,12 @@
-## Settings file was created by plugin Server Devcommands v1.88
+@ -1,342 +0,0 @@
+## Settings file was created by plugin Server Devcommands v1.102
 ## Plugin GUID: server_devcommands
 
 [1. General]
 
 # Setting type: Boolean
 # Default value: false
-Invisible to other players with ghost mode = false
+Invisible to other players with ghost mode = true
 
 # Setting type: Boolean
 # Default value: false
@@ -13,7 +14,17 @@ Disables spawns with ghost mode = false
 
 # Setting type: Boolean
 # Default value: false
-Ignores sleep check with ghost mode = false
+Ignores sleep check with ghost mode = true
+
+## Adds the server as a fake player to allow server to send chat messages.
+# Setting type: Boolean
+# Default value: false
+Server chat = false
+
+## Name of the server chat player.
+# Setting type: String
+# Default value: Server
+Server chat name = Server
 
 ## Disables drops from creatures (if you control the zone), intended to fix high star enemies crashing the game.
 # Setting type: Boolean
@@ -33,7 +44,7 @@ Automatic debug mode = false
 ## Destroys spawners when using kill commands
 # Setting type: Boolean
 # Default value: true
-Kill destroys spawners = true
+Kill destroys spawners = false
 
 ## Automatically enables fly mode when enabling devcommands.
 # Setting type: Boolean
@@ -68,7 +79,7 @@ Automatic ghost mode = false
 ## Sets the default value for the automatic item pick up feature.
 # Setting type: Boolean
 # Default value: true
-Automatic item pick up = true
+Automatic item pick up = false
 
 ## Automatically enables devcommands when joining servers.
 # Setting type: Boolean
@@ -78,7 +89,7 @@ Automatic devcommands = true
 ## All teleporting is much faster with the debug mode.
 # Setting type: Boolean
 # Default value: true
-Debug mode fast teleport = true
+Debug mode fast teleport = false
 
 ## Disables no map having effect.
 # Setting type: Boolean
@@ -87,7 +98,7 @@ Disable no map = false
 
 # Setting type: Boolean
 # Default value: true
-No stamina usage with god mode = false
+No stamina usage with god mode = true
 
 # Setting type: Boolean
 # Default value: true
@@ -117,6 +128,16 @@ No staggering with god mode = true
 # Setting type: Boolean
 # Default value: false
 Hide shout pings = false
+
+## When nocost mode is active, only show recipes craftable at your current crafting station.
+# Setting type: Boolean
+# Default value: true
+Limit recipes to station with nocost mode = true
+
+## When limiting recipes to station, also require the station's upgrade level.
+# Setting type: Boolean
+# Default value: false
+Respect station level with nocost mode = false
 
 # Setting type: Boolean
 # Default value: true
@@ -153,7 +174,7 @@ No clip clears forced environments = true
 
 # Setting type: Boolean
 # Default value: true
-No knockback with god mode = false
+No knockback with god mode = true
 
 # Setting type: Boolean
 # Default value: false
@@ -162,7 +183,7 @@ No Mistlands mist with god mode = false
 ## The map shows coordinates on hover.
 # Setting type: Boolean
 # Default value: true
-Show map coordinates = true
+Show map coordinates = false
 
 ## The minimap shows player coordinates.
 # Setting type: Boolean
@@ -187,7 +208,7 @@ Disable unlock messages = false
 ## Removes debug mode key bindings for killall, removedrops, fly and no cost.
 # Setting type: Boolean
 # Default value: false
-Disable debug mode keys = false
+Disable debug mode keys = true
 
 ## Global keys separated by , that won't be set (server side setting).
 # Setting type: String
@@ -205,11 +226,6 @@ Max undo steps = 50
 # Setting type: Boolean
 # Default value: false
 Disable messages = false
-
-## The simulated key code when scrolling the wheel.
-# Setting type: KeyboardShortcut
-# Default value: None
-Mouse wheel bind key = O
 
 ## Key bind for map teleport.
 # Setting type: KeyboardShortcut
@@ -254,7 +270,7 @@ Improved autocomplete = true
 ## Internal data for aliases.
 # Setting type: String
 # Default value: 
-Command aliases = gotohildr goto 130 3898
+Command aliases = 
 
 ## Enables multiple commands when separated with ;.
 # Setting type: Boolean
@@ -284,7 +300,7 @@ Root users =
 ## Command names separated by , that can't be executed.
 # Setting type: String
 # Default value: dev_config disable_command
-Disabled commands = dev_config disable_command, printseeds, seed, nextseed, lodbias 0, lodbias 1
+Disabled commands = dev_config disable_command
 
 ## Key codes separated by ,
 # Setting type: String
@@ -316,10 +332,9 @@ Command log format = {player_id}/{character_name} ({pos_x:F0}, {pos_z:F0}, {pos_
 ## Format for the find command. Server side setting.
 # Setting type: String
 # Default value: {pos_x:F0}, {pos_z:F0}, {pos_y:F0}, distance {distance:F0} ({name})
-Find format = {pos_x:F0}, {pos_z:F0}, {pos_y:F0}, distance {distance:F0}
+Find format = {pos_x:F0}, {pos_z:F0}, {pos_y:F0}, distance {distance:F0} ({name})
 
 ## Format for minimap coordinates.
 # Setting type: String
 # Default value: x: {pos_x:F0}, z: {pos_z:F0}, y: {pos_y:F0}
 Minimap format = x: {pos_x:F0}, z: {pos_z:F0}, y: {pos_y:F0}
-
